--- a/src/index.css
+++ b/src/index.css
@@ -69,23 +69,48 @@ code {
 }
 
 .restaurantCategorySP {
-  font-size: 15px !important;
-  color: dimgrey !important;
+  font-size: 16px !important;
+  color: black !important;
+  margin-bottom: 10px !important;
 }
 
-.addressSP {
+.address1SP {
   margin-bottom: 0 !important;
   color: dimgrey;
 }
 
-.cardDetailSP {
-  fontsize: 13px !important;
-  color: dimgrey !important;
+.addressSP {
+  margin-bottom: 16px !important;
+  color: dimgrey;
+}
+
+.restaurantDetailImage {
+  display: block !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  width: 75% !important;
+}
+
+.restaurantDetailSP {
+  fontsize: 15px !important;
+  color: black !important;
 }
 
 .restaurantCategory {
   font-size: 15px !important;
   color: dimgrey !important;
+}
+
+.reviewDetailCards {
+  display: block !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  width: 75% !important;
+}
+
+.reviewDetailCardContents {
+  text-align: left !important;
+  font-size: 14px !important;
 }
 
 .address {
